# deft

./: .build  .clang-format  .gitignore  .papers  .test  AUTHORS  CMakeLists.txt  CTestTestfile.cmake  ChangeLog  Makefile  Makefile.am  NEWS  README  README.md  SConstruct  TAGS  TODO.md  Tupfile  Tuprules.tup  Vagrantfile  _config.yml  abs-natural-gas.py  all-rods.sh  all-spheres.sh  analyze-monte-carlo  autogen.sh  bilge.py  bugs.mdwn  build.sh  cmake_install.cmake  configure.ac  constrain-1D.sh  constrained-water-1D.sh  constrained-water-2D.sh  contact.mdwn  doc.mdwn  download.mdwn  droundy.mdwn  four-rods.sh  general_cheat_sheet.mdwn  (+22 more)
.layout/: page.html  sidebar.md  style.css  upload-exclude
_includes/: sidebar.md  style.css
_layouts/: page.html
_posts/: 2013-07-19-README.md
bugs/: bug_in_surface_tension.mdwn  bug_when_not_verbose.mdwn  fails_to_frobnicate.mdwn  needs_more_bugs.mdwn
cmake/: debug  flags.cmake  haskellcode.cmake  papers.cmake  release  tests.cmake
comparisons/: a1_sw_deft.cpp  a1_sw_vrpack.f  a2_sw_deft.cpp  a2_sw_vrpack.f  assoc_deft.cpp  assoc_vrpack.f  da1deta_deft.cpp  da1deta_vrpack.f  da1dlam_deft.cpp  da1dlam_vrpack.f  delta_deft.cpp  delta_vrpack.f  eta_effective_deft.cpp  eta_effective_vrpack.f  gHSetaeff_deft.cpp  gHSetaeff_deft.o.bingley.10052.5YvL3i  gHSetaeff_vrpack.f  gsw_deft.cpp  gsw_vrpack.f  x_deft.cpp  x_vrpack.f
contactpaper/: .gitignore  GNUmakefile  paper.bib  paper.tex
css/: site.css
doc/: .gitignore  code-organization.md  code-organization.mdwn  dont-upload  editors.md  editors.mdwn  fac.md  faq.md  faq.mdwn  general-cheat-sheet.md  index.md  install.md  install.mdwn  latex_tricks.md  latex_tricks.mdwn  mkdown.py  papers.md  setup.mdwn  sidebar.md  src.md  style.scss  template.html  vagrant.md  website.fac
doc/_layouts/: page.html
fac/: all-papers.py  configure.py  dft.py  doc.py  facfile.py  figs.py  haskell.py  latex.py  monte-carlos.py  start-here.fac  svg.py
fortran/: .gitignore  saft_assoc.f  saft_dft.in  saftvr7.f  vrpack.f
free-energy-data/: run-free-energy.py
git/: commit-msg  pre-commit
news/: Wiki-working.mdwn  version_1.0.mdwn
paper/: .gitignore  GNUmakefile  exampletalk.tex  march-2012.tex  mini-presentation.tex  paper.bib  paper.tex  poster.tex  presentation.tex  project.tex
papers/: .gitignore  GNUmakefile  bilge-latex.py  papers.md  papers.mdwn  tup-latex.py  tup-matplotlib.py
site_scons/: mdx_mathjax.py
src/: CSE.cpp  CallMe.cpp  CallMe.h  ChemicalPotential.cpp  ChemicalPotential.h  ConjugateGradient.cpp  ContactDensity.cpp  ContactDensity.h  Crossover.cpp  Crossover.h  Downhill.cpp  Downhill.h  EffectivePotentialToDensity.cpp  EffectivePotentialToDensity.h  Expression.cpp  Expression.h  ExternalPotential.cpp  ExternalPotential.h  FieldFunctional.cpp  FieldFunctional.h  Functional.cpp  Functional.h  Functionals.h  Gaussian.cpp  GaussianPolynomial.cpp  Grid.cpp  Grid.h  GridDescription.cpp  GridDescription.h  HardFluidFast.h  HardRosenfeldFluidFast.h  HardSpheres.cpp  HardSpheresFast.cpp  HardSpheresFast.h  HardSpheresRFFast.cpp  HardSpheresRFFast.h  IdealGas.cpp  IdealGas.h  IdealGasFast.cpp  IdealGasFast.h  (+51 more)
src/Monte-Carlo/: InitBox.cpp  InitBox.h  Tupfile  analyze-monte-carlo.cpp  electrostatic-monte-carlo.cpp  fileio.cpp  free-energy-monte-carlo-infinite-case.cpp  free-energy-monte-carlo.cpp  grand-monte-carlo.cpp  grand.cpp  grand.h  liquid-vapor-monte-carlo.cpp  monte-carlo.cpp  monte-carlo.h  new-plot_density.py  new-soft.cpp  pair-monte-carlo.cpp  plot_density.py  polyhedra-monte-carlo.cpp  polyhedra-talk.cpp  polyhedra.cpp  polyhedra.h  printtest.cpp  radial-distribution-monte-carlo.cpp  showSpheres.py  showSpheres2.py  showSpheres3.py  showSpheres4.py  simulation.cpp  soft-monte-carlo (copy).cpp  soft-monte-carlo.cpp  square-well-monte-carlo.cpp  square-well.cpp  square-well.h  triplet-monte-carlo.cpp
src/haskell/: .gitignore  C.hs  CodeGen.bak  CodeGen.hs  CodeGen.lhs  Expression.hs  Expression.lhs  ExternalLennardJones.hs  ExternalPotentialTest.hs  FMT.hs  Fields.lhs  Hash.lhs  HughesSaft.hs  IdealGas.hs  Latex.hs  LatexDouble.hs  LogN0.hs  Makefile  NewCode.hs  NewCode.lhs  Optimize.hs  Quadratic.hs  QuadraticGaussian.hs  QuadraticN0.hs  Quantum.hs  Rosenfeld.hs  SFMT.hs  SW_liquid.hs  SomeFunctionals.hs  Statement.hs  Statement.lhs  Tupfile  WaterSaft.hs  WhiteBear.hs  bilge.py  create_generators.py  find-deps.pl  find-deps.py  functionals  functionals.hs  (+7 more)
src/monte-carlo/: monte-carlo.cpp
src/new/: .gitignore  Bools.h  ComplexVector.h  Functional.h  GradSpecifier.h  Minimize.cpp  Minimize.h  Minimizer.cpp  Minimizer.h  NewFunctional.cpp  NewFunctional.h  SW_liquidFast.cpp  SW_liquidFast.h  Tupfile  Vector.h  Vector3.h  Verbosity.h  WhiteBearFast.h  test.cpp
src/rust/: Cargo.toml
src/rust/expr-derive/: Cargo.toml
src/rust/expr-derive/src/: lib.rs
src/rust/src/: .lib.rs.swp  lib._rs_  lib.rs  main.rs.-1  main.rs.0
templates/: release.mdwn
tests/: .gitignore  Tupfile  compare-gsigmas.cpp  comparisons.sh  constrained-water-fast-slow.cpp  convolve-finite-difference.cpp  convolve.cpp  eos.cpp  eps.cpp  expression.cpp  fftinverse.cpp  functional-arithmetic.cpp  functional-expressions.cpp  functional-of-double.cpp  generated-code.cpp  generating-code.cpp  hard-spheres-cavity.cpp  hard-spheres-cavity.log-t  hard-spheres-fast.cpp  hard-spheres-hard-wall.cpp  hard-spheres-hard-wall.log-t  hard-spheres.cpp  hydrogen-atom.cpp  ideal-gas-at-pressure.cpp  ideal-gas-external-potential.cpp  ideal-gas-optimization.cpp  ideal-gas.cpp  latex-generation.sh  memory.cpp  new-code.cpp  new-fftinverse.cpp  new-generated-code.cpp  new-generated.cpp  new-hard-spheres.cpp  new-sfmt-walls.cpp  new-water-saft.cpp  newcode.cpp  null.sh  optimized-code.cpp  precision.cpp  (+12 more)
todo/: Implement_smart_stop_condition.mdwn  Split_SomeFunctionals.hs_into_multiple_modules.mdwn  add_Functional_multiple_FieldFunctionals.mdwn  add_way_to_construct_V__40__r__41__.mdwn  cavity_test_case.mdwn  done.mdwn  handle_symmetries.mdwn  implement_extra-careful_line_minimizer.mdwn
vagrant/: provision-debian.sh
(+2310 files in other folders)
